err/pytml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytml-0.2.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/mock'...
Listing './lib/python3.5/site-packages/tests/performance'...
Compiling './lib/python3.5/site-packages/tests/performance/check.py'...
***   File "./lib/python3.5/site-packages/tests/performance/check.py", line 63
    print 'Translate %f' % t.per_action()
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/tests/unit/api'...
Listing './lib/python3.5/site-packages/tests/unit/dictionary'...
Listing './lib/python3.5/site-packages/tests/unit/rules'...
Listing './lib/python3.5/site-packages/tests/unit/rules/contexts'...
Listing './lib/python3.5/site-packages/tests/unit/token'...
Listing './lib/python3.5/site-packages/tests/unit/tools'...
Listing './lib/python3.5/site-packages/tests/unit/translation'...
Listing './lib/python3.5/site-packages/tml'...
Listing './lib/python3.5/site-packages/tml/api'...
Listing './lib/python3.5/site-packages/tml/cache_adapters'...
Listing './lib/python3.5/site-packages/tml/decoration'...
Listing './lib/python3.5/site-packages/tml/defaults'...
Listing './lib/python3.5/site-packages/tml/defaults/languages'...
Listing './lib/python3.5/site-packages/tml/dictionary'...
Listing './lib/python3.5/site-packages/tml/rules'...
Listing './lib/python3.5/site-packages/tml/rules/contexts'...
Listing './lib/python3.5/site-packages/tml/token'...
Listing './lib/python3.5/site-packages/tml/tools'...
Listing './lib/python3.5/site-packages/tml/translation'...
Listing './share'...
Listing './share/python-wheels'...
